@@ -19,21 +19,21 @@ if (NOT HAIKU AND NOT WIN32 AND NOT APPLE)
            endforeach()
     update_iconcache(hicolor)
 
-    if (EXISTS /etc/lsb-release)
-        file(READ "/etc/lsb-release" LSB_RELEASE_CONTENTS)
-        string(REGEX MATCH "DISTRIB_ID=Ubuntu" IS_UBUNTU ${LSB_RELEASE_CONTENTS})
-        if (IS_UBUNTU)
-            set(INSTALL_UBUNTU_ICONS_DEFAULT ON)
-        else(IS_UBUNTU)
-            set(INSTALL_UBUNTU_ICONS_DEFAULT OFF)
-        endif(IS_UBUNTU)
-    else(EXISTS /etc/lsb-release)
+    #if (EXISTS /etc/lsb-release)
+    #    file(READ "/etc/lsb-release" LSB_RELEASE_CONTENTS)
+    #    string(REGEX MATCH "DISTRIB_ID=Ubuntu" IS_UBUNTU ${LSB_RELEASE_CONTENTS})
+    #	if (IS_UBUNTU)
+    #        set(INSTALL_UBUNTU_ICONS_DEFAULT ON)
+    #    else(IS_UBUNTU)
+    #        set(INSTALL_UBUNTU_ICONS_DEFAULT OFF)
+    #    endif(IS_UBUNTU)
+    #else(EXISTS /etc/lsb-release)
         set(INSTALL_UBUNTU_ICONS_DEFAULT OFF)
-    endif(EXISTS /etc/lsb-release)
-    option(INSTALL_UBUNTU_ICONS "Install the Ubuntu Suru icons" ${INSTALL_UBUNTU_ICONS_DEFAULT})
+    #endif(EXISTS /etc/lsb-release)
+    option(INSTALL_UBUNTU_ICONS "Install the Ubuntu Yaru icons" ${INSTALL_UBUNTU_ICONS_DEFAULT})
 
     if (INSTALL_UBUNTU_ICONS)
-        add_subdirectory(suru)
-        update_iconcache(Suru)
+        add_subdirectory(yaru)
+        update_iconcache(Yaru)
     endif ()
 endif ()
